fix issue not fit

--- a/fm5-profile-card-component-main/styles.css
+++ b/fm5-profile-card-component-main/styles.css
@@ -14,6 +14,7 @@
 }
 
 html {
+    overflow: hidden;
 }
 body {
     display: flex;
@@ -39,55 +40,39 @@ body {
     transform: translate(55%, 45%);
 }
 
-/* @media screen and (max-width: 706px) {
-    #bg-pattern-top {
-        transform: translate(-70%, -55%);
-    }
-    #bg-pattern-bottom {
-        transform: translate(70%, 55%);
-    }
-}
-
-@media screen and (max-height: 700px) {
-    #bg-pattern-bottom {
-        transform: translate(70%, 75%)
-    }
-} */
-
 #wrapper-content {
-    width: 450px;
-    height: 600px;
+    max-width: 350px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 8px;
+    border-radius: 15px;
     background-color: #FFFFFF;
     position: relative;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
-
 
 #header-bg {
     width: 100%;
-    height: 200px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+    height: 150px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 #profil-pic {
     position: absolute;
-    top: 150px;
-    left: 180px;
+    top: 100px;
+    left: 130px;
     border-radius: 100%;
     border: 3px solid #FFFFFF;
 }
 
 #content {
     width: 100%;
-    height: 250px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 40px;
 }
 
 #name {
@@ -103,12 +88,13 @@ body {
 #city {
     color: var(--dark_gray);
     margin-top: 10px;
+    font-weight: 400;
 }
 
 #content-end {
     width: 100%;
-    height: 150px;
-    border-top: 1px solid var(--dark_grayish_blue);
+    height: 100px;
+    border-top: 1px solid hsl(0, 10%, 88%);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -127,7 +113,6 @@ body {
     color: var(--dark_gray);
     margin-top: 10px;
 }
-
 
 footer {
     flex-shrink: 0;
@@ -151,10 +136,22 @@ footer a{
         height: 100px;
     }
     #wrapper-content {
-        width: 350px;
+        width: 320px;
         margin-top: 100px;
 }
     #profil-pic {
-        left: 130px;
+        left: 115px;
+    }
+    #bg-pattern-top {
+        transform: translate(-45%, -50%);
+    }
+    #bg-pattern-bottom {
+        transform: translate(45%, 55%);
+    }
+}
+
+@media screen and (max-height: 700px) {
+    #bg-pattern-bottom {
+        transform: translate(70%, 75%)
     }
 }
